force-app/main/default/objects/Case/fields/ComplaintEntryChannel__c.field-meta.xml
<CustomField>
    <fullName>ComplaintEntryChannel__c</fullName>
    <label>Canale di Ingresso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>PEC</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Posta Ordinaria</fullName>
            </value>
            <value>
                <fullName>Modulo Sportello</fullName>
            </value>
            <value>
                <fullName>Raccomandata</fullName>
            </value>
            <value>
                <fullName>SOL-APP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>