force-app/main/default/objects/Case/fields/ComplaintType__c.field-meta.xml
<CustomField>
    <fullName>ComplaintType__c</fullName>
    <label>Tipologia Reclamo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reclamo Scritto</fullName>
            </value>
            <value>
                <fullName>Richiesta Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>