force-app/main/default/objects/Case/fields/CompletedDocumentationDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDocumentationDate__c</fullName>
    <label>Data Documentazione Completata</label>
    <type>Date</type>
</CustomField>