force-app/main/default/objects/Case/fields/ComplexCategory__c.field-meta.xml
<CustomField>
    <fullName>ComplexCategory__c</fullName>
    <label>Categoria Complessa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ricostruz. consumi malfunz. del gruppo di misura</fullName>
            </value>
            <value>
                <fullName>Richieste relative a dati di misura per periodi superiori a 2 anni</fullName>
            </value>
            <value>
                <fullName>Richieste relative a POD trattati orari</fullName>
            </value>
            <value>
                <fullName>Verifiche dati anag. del POD/PdR con rete gestita da diverso operatore</fullName>
            </value>
            <value>
                <fullName>Verifiche dati anag. del POD/PdR per richieste aperte più di 12 mesi fa</fullName>
            </value>
            <value>
                <fullName>Rich. per interruzioni del servizio di distribuzione</fullName>
            </value>
            <value>
                <fullName>Contestazioni del cliente per esecuzione lavori di aspetti tecnici</fullName>
            </value>
            <value>
                <fullName>Richieste relative a PdR con misuratori di classe superiore a G40</fullName>
            </value>
            <value>
                <fullName>Richieste relative a errato abbinamento PdR/matricola/cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>