force-app/main/default/objects/Case/fields/CompliantOriginEmail__c.field-meta.xml
<CustomField>
    <fullName>CompliantOriginEmail__c</fullName>
    <label>Indirizzo/email provenienza reclamo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>