force-app/main/default/objects/Case/fields/Concession__c.field-meta.xml
<CustomField>
    <fullName>Concession__c</fullName>
    <label>Agevolazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>