force-app/main/default/objects/Case/fields/ContractAccountCode__c.field-meta.xml
<CustomField>
    <fullName>ContractAccountCode__c</fullName>
    <description>Conto Contrattuale</description>
    <label>Conto Contrattuale</label>
    <length>15</length>
    <type>Text</type>
</CustomField>