force-app/main/default/objects/Case/fields/ContractCode__c.field-meta.xml
<CustomField>
    <fullName>ContractCode__c</fullName>
    <description>Codice contratto preso in lookup dal Contract</description>
    <formula>Contract__r.SAPContractCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice contratto</label>
    <type>Text</type>
</CustomField>