force-app/main/default/objects/Case/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <description>Data attivazione del contratto selezionato in fase di innesco processo &quot;Sollecito Emissione Bolletta&quot;</description>
    <formula>Contract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Attivazione Contratto</label>
    <type>Date</type>
</CustomField>