force-app/main/default/objects/Case/fields/CopyType__c.field-meta.xml
<CustomField>
    <fullName>CopyType__c</fullName>
    <label>Tipo Copia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copia contratto firmato</fullName>
            </value>
            <value>
                <fullName>Copia contratto non firmato</fullName>
            </value>
            <value>
                <fullName>Copia della registrazione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>