force-app/main/default/objects/Case/fields/CorrectAddressToVerify__c.field-meta.xml
<CustomField>
    <fullName>CorrectAddressToVerify__c</fullName>
    <label>Indirizzo corretto da verificare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>