force-app/main/default/objects/Case/fields/CorrectionDocumentEmissionDay__c.field-meta.xml
<CustomField>
    <fullName>CorrectionDocumentEmissionDay__c</fullName>
    <label>Data Emissione Documento di Rettifica</label>
    <type>Date</type>
</CustomField>