force-app/main/default/objects/Case/fields/CorrectionRight__c.field-meta.xml
<CustomField>
    <fullName>CorrectionRight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diritto Rettifica</label>
    <type>Checkbox</type>
</CustomField>