force-app/main/default/objects/Case/fields/CreatedByCallCenter__c.field-meta.xml
<CustomField>
    <fullName>CreatedByCallCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creato da Call Center</label>
    <type>Checkbox</type>
</CustomField>