force-app/main/default/objects/Case/fields/CreatorGroup__c.field-meta.xml
<CustomField>
    <fullName>CreatorGroup__c</fullName>
    <label>Gruppo Creatore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CreatorGroup</valueSetName>
    </valueSet>
</CustomField>