force-app/main/default/objects/Case/fields/CustomerMarking__c.field-meta.xml
<CustomField>
    <fullName>CustomerMarking__c</fullName>
    <description>Nuova Marcatura cliente per sotto-processo Modifica Dati di contatto</description>
    <label>Marcatura Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_CustomerMarking</valueSetName>
    </valueSet>
</CustomField>