force-app/main/default/objects/Case/fields/CustomerPaymentAgreements__c.field-meta.xml
<CustomField>
    <fullName>CustomerPaymentAgreements__c</fullName>
    <description>Indica gli accordi con il cliente rispetto allo stato del pagamento della bolletta</description>
    <label>Pagamenti: Accordi con il Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non pagato</fullName>
            </value>
            <value>
                <fullName>Pagato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>