force-app/main/default/objects/Case/fields/CustomerPresence__c.field-meta.xml
<CustomField>
    <fullName>CustomerPresence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Presenza Cliente</description>
    <label>Presenza Cliente</label>
    <type>Checkbox</type>
</CustomField>