force-app/main/default/objects/Case/fields/CustomerRecessDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerRecessDate__c</fullName>
    <description>Data comunicazione Recesso al Cliente</description>
    <label>Customer Recess Date</label>
    <type>Date</type>
</CustomField>