force-app/main/default/objects/Case/fields/CustomerRequestAccomplished__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequestAccomplished__c</fullName>
    <label>Richiesta del cliente accolta?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Parziale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>