force-app/main/default/objects/Case/fields/CustomerRequestDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequestDate__c</fullName>
    <description>Data richiesta Cliente</description>
    <label>Data inserimento richiesta</label>
    <type>DateTime</type>
</CustomField>