force-app/main/default/objects/Case/fields/CustomerSelfReading__c.field-meta.xml
<CustomField>
    <fullName>CustomerSelfReading__c</fullName>
    <label>Autolettura Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>