force-app/main/default/objects/Case/fields/CutomerAssisted__c.field-meta.xml
<CustomField>
    <fullName>CutomerAssisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cliente assistito</description>
    <label>Cliente assistito</label>
    <type>Checkbox</type>
</CustomField>