force-app/main/default/objects/Case/fields/DataToCertified__c.field-meta.xml
<CustomField>
    <fullName>DataToCertified__c</fullName>
    <label>Dati da certificare</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titolarità</fullName>
            </value>
            <value>
                <fullName>Consumi</fullName>
            </value>
            <value>
                <fullName>Titolarità e consumi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>