force-app/main/default/objects/Case/fields/DataUltimoAllineamentoGAA__c.field-meta.xml
<CustomField>
    <fullName>DataUltimoAllineamentoGAA__c</fullName>
    <label>Data Ultimo Allineamento GAA</label>
    <type>Date</type>
</CustomField>