force-app/main/default/objects/Case/fields/DeceasedDate__c.field-meta.xml
<CustomField>
    <fullName>DeceasedDate__c</fullName>
    <description>Campo utilizzato per Votive Modena</description>
    <label>Data decesso</label>
    <type>Date</type>
</CustomField>