force-app/main/default/objects/Case/fields/DeceasedFiscalCode__c.field-meta.xml
<CustomField>
    <fullName>DeceasedFiscalCode__c</fullName>
    <description>Codice fiscale del defunto</description>
    <label>Deceased Fiscal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>