force-app/main/default/objects/Case/fields/DeceasedName__c.field-meta.xml
<CustomField>
    <fullName>DeceasedName__c</fullName>
    <description>Nome del defunto</description>
    <label>Deceased Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>