force-app/main/default/objects/Case/fields/DeceasedSurname__c.field-meta.xml
<CustomField>
    <fullName>DeceasedSurname__c</fullName>
    <description>Cognome del defunto</description>
    <label>Cognome del defunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>