force-app/main/default/objects/Case/fields/DeclarationDate__c.field-meta.xml
<CustomField>
    <fullName>DeclarationDate__c</fullName>
    <label>Data Dichiarazione</label>
    <type>Date</type>
</CustomField>