force-app/main/default/objects/Case/fields/DeclaredArea__c.field-meta.xml
<CustomField>
    <fullName>DeclaredArea__c</fullName>
    <label>Superficie dichiarata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>