force-app/main/default/objects/Case/fields/DelegateName__c.field-meta.xml
<CustomField>
    <fullName>DelegateName__c</fullName>
    <label>Nome Delegato (Nome e Cognome)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>