force-app/main/default/objects/Case/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <description>Campo da compilare manualmente per il processo di Copia Bollettta/Bollettino</description>
    <label>Indirizzo di Recapito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>