force-app/main/default/objects/Case/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acconto</label>
    <type>Checkbox</type>
</CustomField>