force-app/main/default/objects/Case/fields/DepositAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositAmount__c</fullName>
    <description>Importo Acconto</description>
    <label>Importo Acconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>