force-app/main/default/objects/Case/fields/DepositExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>DepositExpirationDate__c</fullName>
    <description>Scadenza Acconto</description>
    <label>Scadenza Acconto</label>
    <type>Date</type>
</CustomField>