force-app/main/default/objects/Case/fields/DepositPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>DepositPaymentDate__c</fullName>
    <description>Data Pagamento Acconto</description>
    <label>Data Pagamento Acconto</label>
    <type>Date</type>
</CustomField>