force-app/main/default/objects/Case/fields/DepositPaymentMode__c.field-meta.xml
<CustomField>
    <fullName>DepositPaymentMode__c</fullName>
    <description>Modalità Pagamento Acconto</description>
    <label>Modalità Pagamento Acconto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bollettino postale</fullName>
            </value>
            <value>
                <fullName>Bonifico</fullName>
                <label>Bonifico Pagato</label>
            </value>
            <value>
                <fullName>POS Sportello</fullName>
            </value>
            <value>
                <fullName>Paperless</fullName>
            </value>
            <value>
                <fullName>In Compartecipazione</fullName>
            </value>
            <value>
                <fullName>Totalmente da Istituzioni pubbliche</fullName>
            </value>
            <value>
                <fullName>Totalmente Dal Cliente</fullName>
            </value>
            <value>
                <fullName>Acconto Assistiti</fullName>
            </value>
            <value>
                <fullName>Promessa di pagamento</fullName>
            </value>
            <value>
                <fullName>Bonifico Paperless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>