force-app/main/default/objects/Case/fields/DetailOne__c.field-meta.xml
<CustomField>
    <fullName>DetailOne__c</fullName>
    <label>Dettaglio 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DisasterType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M - Dettaglio 1</fullName>
            </value>
            <value>
                <fullName>S - Dettaglio 1</fullName>
            </value>
            <value>
                <fullName>E - Dettaglio 1</fullName>
            </value>
            <value>
                <fullName>ES - Dettaglio 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>