force-app/main/default/objects/Case/fields/DetailTwo__c.field-meta.xml
<CustomField>
    <fullName>DetailTwo__c</fullName>
    <label>Dettaglio 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DisasterType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M - Dettaglio 2</fullName>
            </value>
            <value>
                <fullName>S - Dettaglio 2</fullName>
            </value>
            <value>
                <fullName>E - Dettaglio 2</fullName>
            </value>
            <value>
                <fullName>ES - Dettaglio 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>