force-app/main/default/objects/Case/fields/DisasterType__c.field-meta.xml
<CustomField>
    <fullName>DisasterType__c</fullName>
    <label>Tipo Calamità</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maltempo</fullName>
            </value>
            <value>
                <fullName>Sisma</fullName>
            </value>
            <value>
                <fullName>Emergenza</fullName>
            </value>
            <value>
                <fullName>Emergenza Sanitaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>