force-app/main/default/objects/Case/fields/DiscardCodeHeroku__c.field-meta.xml
<CustomField>
    <fullName>DiscardCodeHeroku__c</fullName>
    <label>Codice Scarto Heroku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>