force-app/main/default/objects/Case/fields/DiscardDescription__c.field-meta.xml
<CustomField>
    <fullName>DiscardDescription__c</fullName>
    <label>Causale scarto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>