force-app/main/default/objects/Case/fields/Disconnectable__c.field-meta.xml
<CustomField>
    <fullName>Disconnectable__c</fullName>
    <description>Indica la disalimentabilità sulla fornitura</description>
    <label>Disalimentabile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>