force-app/main/default/objects/Case/fields/DisconnectibilityType__c.field-meta.xml
<CustomField>
    <fullName>DisconnectibilityType__c</fullName>
    <description>Categoria di disalimentabilità indica perché un impianto non può essere disalimentato</description>
    <label>Categoria Disalimentabilità</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Disconnectable__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_DisconnectibilityType</valueSetName>
    </valueSet>
</CustomField>