force-app/main/default/objects/Case/fields/DisputeTerminationDate__c.field-meta.xml
<CustomField>
    <fullName>DisputeTerminationDate__c</fullName>
    <description>Data Termine Contenzioso</description>
    <label>Data Termine Contenzioso</label>
    <type>Date</type>
</CustomField>