force-app/main/default/objects/Case/fields/DistributorCode__c.field-meta.xml
<CustomField>
    <fullName>DistributorCode__c</fullName>
    <description>Codice da Inviare ai sistemi a valle</description>
    <label>Codice Distributore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>