force-app/main/default/objects/Case/fields/DistributorFlowCode__c.field-meta.xml
<CustomField>
    <fullName>DistributorFlowCode__c</fullName>
    <label>Codice Flusso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>