force-app/main/default/objects/Case/fields/DistributorFormula__c.field-meta.xml
<CustomField>
    <fullName>DistributorFormula__c</fullName>
    <description>Distributore preso in lookup dal Service point</description>
    <formula>ServicePoint__r.Distributor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributore</label>
    <type>Text</type>
</CustomField>