force-app/main/default/objects/Case/fields/DistributorName__c.field-meta.xml
<CustomField>
    <fullName>DistributorName__c</fullName>
    <formula>IF(ServicePoint__c != &apos;&apos;, ServicePoint__r.Distributor__r.Name, Distributor__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Distributore</label>
    <type>Text</type>
</CustomField>