force-app/main/default/objects/Case/fields/DistributorNote__c.field-meta.xml
<CustomField>
    <fullName>DistributorNote__c</fullName>
    <description>Note da inviare al DL</description>
    <label>Note al DL</label>
    <type>TextArea</type>
</CustomField>