force-app/main/default/objects/Case/fields/DistributorPracticeCode__c.field-meta.xml
<CustomField>
    <fullName>DistributorPracticeCode__c</fullName>
    <description>il codice pratica del distributore</description>
    <label>Codice pratica distributore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>