force-app/main/default/objects/Case/fields/DistributorServiceCode__c.field-meta.xml
<CustomField>
    <fullName>DistributorServiceCode__c</fullName>
    <description>Codice pratica DL</description>
    <label>Numero pratica DL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>