force-app/main/default/objects/Case/fields/DocumentalProcessType__c.field-meta.xml
<CustomField>
    <fullName>DocumentalProcessType__c</fullName>
    <description>Rappresenta il tipo di processo gestito dal provider Documentale</description>
    <formula>IF(AND(ISPICKVAL(Type,&apos;Variazione Potenza&apos;), PowerRequested__c &gt; PowerCommitted__c),&apos;Aumento Potenza&apos;,
    IF(AND(ISPICKVAL(Type,&apos;Variazione Potenza&apos;), PowerRequested__c &lt; PowerCommitted__c),&apos;Diminuzione Potenza&apos;,
        IF(AND(ISPICKVAL(Type,&apos;Verifica Tensione - Pressione&apos;), CommodityFormula__c=&apos;Gas&apos;),&apos;Verifica Pressione&apos;,
            IF(AND(ISPICKVAL(Type,&apos;Verifica Tensione - Pressione&apos;), CommodityFormula__c=&apos;Energia Elettrica&apos;),&apos;Verifica Tensione&apos;,
				IF(ISPICKVAL(Type,&apos;Verifica GDM&apos;),&apos;Verifica GdM&apos;,
					IF(ISPICKVAL(Type,&apos;Richiesta lettura cliente&apos;),&apos;Richiesta lettura c/cliente&apos;,
						IF(ISPICKVAL(Type,&apos;Sost. contatore cliente&apos;),&apos;Sost. contatore c/cliente&apos;,TEXT(Type))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Processo Documentale</label>
    <type>Text</type>
</CustomField>