force-app/main/default/objects/Case/fields/DocumentationRequired__c.field-meta.xml
<CustomField>
    <fullName>DocumentationRequired__c</fullName>
    <description>Campo testo per inserire una motivazione. Solo per processo &quot;Gestione Bonus Sociale&quot;.</description>
    <label>Documentazione richiesta da Comune/CAF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>