force-app/main/default/objects/Case/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <description>Numero Documento</description>
    <label>Numero Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>