force-app/main/default/objects/Case/fields/DocumentPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>DocumentPaymentMethod__c</fullName>
    <description>Modalità di Pagamento della Fattura selezionata in Estratto Conto per innescare il processo  di Fatturazione</description>
    <label>Modalità di pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>