force-app/main/default/objects/Case/fields/DocumentResidue__c.field-meta.xml
<CustomField>
    <fullName>DocumentResidue__c</fullName>
    <description>Importo Fattura selezionata in Estratto Conto per innescare il processo  di Fatturazione</description>
    <label>Residuo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>