force-app/main/default/objects/Case/fields/DocusignExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>DocusignExpirationDate__c</fullName>
    <description>Data Scadenza Documento</description>
    <label>Data Scadenza Documento</label>
    <type>Date</type>
</CustomField>