force-app/main/default/objects/Case/fields/EarlyRecess__c.field-meta.xml
<CustomField>
    <fullName>EarlyRecess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recesso Anticipato</description>
    <label>Recesso Anticipato</label>
    <type>Checkbox</type>
</CustomField>