force-app/main/default/objects/Case/fields/ElectronicInvoiceCertifiedEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ElectronicInvoiceCertifiedEmailAddress__c</fullName>
    <description>Per modifica Dati fatturazione elettronica</description>
    <label>PEC Fatturazione Elettronica</label>
    <length>50</length>
    <type>Text</type>
</CustomField>