force-app/main/default/objects/Case/fields/ElectronicInvoicingMethod__c.field-meta.xml
<CustomField>
    <fullName>ElectronicInvoicingMethod__c</fullName>
    <description>Per modifica Dati fatturazione elettronica</description>
    <label>Modalità invio fatturazione Elettronica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillingMethod</valueSetName>
    </valueSet>
</CustomField>