force-app/main/default/objects/Case/fields/ElementDetail__c.field-meta.xml
<CustomField>
    <fullName>ElementDetail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elementi di Dettaglio</label>
    <type>Checkbox</type>
</CustomField>