force-app/main/default/objects/Case/fields/EndAppointment__c.field-meta.xml
<CustomField>
    <fullName>EndAppointment__c</fullName>
    <label>Fine Appuntamento</label>
    <type>Date</type>
</CustomField>