force-app/main/default/objects/Case/fields/EndBilledPeriod__c.field-meta.xml
<CustomField>
    <fullName>EndBilledPeriod__c</fullName>
    <description>Fine inizio Periodo Fatturato per processo &quot;Verifica Titolarità POD&quot;</description>
    <label>Periodo Fatturato &quot;A&quot;</label>
    <type>Date</type>
</CustomField>