force-app/main/default/objects/Case/fields/EndValidityDate__c.field-meta.xml
<CustomField>
    <fullName>EndValidityDate__c</fullName>
    <description>Dato che l&apos;operatore inserisce manualmente</description>
    <label>Data fine validità</label>
    <type>Date</type>
</CustomField>