force-app/main/default/objects/Case/fields/EnergyService__c.field-meta.xml
<CustomField>
    <fullName>EnergyService__c</fullName>
    <description>Servizio Energia</description>
    <label>Servizio Energia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>