force-app/main/default/objects/Case/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Errore</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ErrorType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offerta errata</fullName>
            </value>
            <value>
                <fullName>Prezzi errati</fullName>
            </value>
            <value>
                <fullName>Versione/Profilo</fullName>
            </value>
            <value>
                <fullName>Data di partenza errata</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Quota fissa binomia</fullName>
            </value>
            <value>
                <fullName>Capacità GC</fullName>
            </value>
            <value>
                <fullName>Bonus RID</fullName>
            </value>
            <value>
                <fullName>Opzione verde</fullName>
            </value>
            <value>
                <fullName>Errati addebiti</fullName>
            </value>
            <value>
                <fullName>Bonus/Promo/Conversioni</fullName>
            </value>
            <value>
                <fullName>Residente SI/NO</fullName>
            </value>
            <value>
                <fullName>Tariffe distribuzione</fullName>
            </value>
            <value>
                <fullName>Scaglioni distribuzione</fullName>
            </value>
            <value>
                <fullName>Energivori</fullName>
            </value>
            <value>
                <fullName>Autoproduttori</fullName>
            </value>
            <value>
                <fullName>Potenze contrattuali</fullName>
            </value>
            <value>
                <fullName>Tensione di alimentzione</fullName>
            </value>
            <value>
                <fullName>Valore del PCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>