force-app/main/default/objects/Case/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <label>Tipo Errore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offerta</fullName>
            </value>
            <value>
                <fullName>Sconti/Condizioni</fullName>
            </value>
            <value>
                <fullName>Tariffa Distribuzione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>