force-app/main/default/objects/Case/fields/Excises__c.field-meta.xml
<CustomField>
    <fullName>Excises__c</fullName>
    <description>Accise</description>
    <label>Excises</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>