force-app/main/default/objects/Case/fields/ExpectedExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>ExpectedExecutionTime__c</fullName>
    <description>Contiene il tempo di esecuzione dei lavori</description>
    <label>Tempo esecuzione lavori</label>
    <length>255</length>
    <type>Text</type>
</CustomField>