force-app/main/default/objects/Case/fields/ExtremeLastDomiciliation__c.field-meta.xml
<CustomField>
    <fullName>ExtremeLastDomiciliation__c</fullName>
    <description>Estremi Ultima Domiciliazione</description>
    <label>Estremi Ultima Domiciliazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>