force-app/main/default/objects/Case/fields/FacilityType__c.field-meta.xml
<CustomField>
    <fullName>FacilityType__c</fullName>
    <label>Tipo agevolazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>