force-app/main/default/objects/Case/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Nuovo Fax per sotto-processo Modifica Dati di contatto</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>