force-app/main/default/objects/Case/fields/FirstLevelComplaintClassification__c.field-meta.xml
<CustomField>
    <fullName>FirstLevelComplaintClassification__c</fullName>
    <label>1° Livello</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ComplaintType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Reclamo Scritto</fullName>
            </value>
            <value>
                <fullName>Rettifica Doppia Fatturazione</fullName>
            </value>
            <value>
                <fullName>Richiesta di informazioni</fullName>
            </value>
            <value>
                <fullName>Richiesta di Rettifica di fatturazione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>