force-app/main/default/objects/Case/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Nuovo Nome cliente per sotto-processo Modifica Dati Fiscali</description>
    <label>Nome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>